@@ -32,6 +32,7 @@ Version 1.1.7 to be released
 - Enh #558, #1755: Added parametrized named scopes, added scopes to criteria, implemented scope criteria merging (creocoder, Sam Dark)
 - Enh #801: Added RESTful URL management (Qiang)
 - Enh #1117: Added support for "through" in Active Record relations allowing to handle association table data (creocoder, Sam Dark)
+- Enh #1782: Added updateSelector property to both CGridView and CListView (Qiang)
 - Enh #1786: Enhanced CUrlValidator by adding 'validSchemes' and 'defaultScheme' property (Y!!)
 - Enh #1792: Enhanced CGridView: on ajax error a proper message is composed and displayed or optionally sent to the custom error handler (mdomba)
 - Enh #1795: Added CFormInputElement::$enableAjaxValidation to allow turning on/off AJAX validation for individual input fields (Qiang)
